--- a/code_responsive-main/assets/css/main.css
+++ b/code_responsive-main/assets/css/main.css
@@ -1,51 +1,64 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
   font-family: "Poppins", sans-serif;
 }
 
-.summary {  
+.summary {
   width: 600px;
   color: #474747;
 }
-P{
+
+.summary P {
   font-size: 15PX;
 }
-.why{
-    font-family: visby cf,Sans-serif;
-    font-size: 50px;
-    font-weight: 300;
-    text-transform: lowercase;
-    letter-spacing: -1.5px;
+
+.summary .why {
+  font-family: visby cf,Sans-serif;
+  font-size: 50px;
+  font-weight: 300;
+  text-transform: lowercase;
+  letter-spacing: -1.5px;
 }
 
-.code{
-    font-family: visby cf,Sans-serif;
-    font-size: 50px;
-    font-weight: 800;
-    text-transform: lowercase;
-    line-height: 70px;
-    letter-spacing: -1.2px;
+.summary .code {
+  font-family: visby cf,Sans-serif;
+  font-size: 50px;
+  font-weight: 800;
+  text-transform: lowercase;
+  line-height: 70px;
+  letter-spacing: -1.2px;
 }
 
-.items{
+.items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  box-sizing: border-box;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin-top: 15px;
 }
 
-.item{
+.item {
   width: 600px;
   height: 200px;
-  justify-content: space-between;
-  box-sizing: border-box;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin-top: 50px;
   border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -55,29 +68,31 @@ P{
   height: 200px;
 }
 
-h4 {
+.item h4 {
   font-weight: bolder;
   font-size: 19px;
   font-weight: 800;
 }
 
-h5{
-display: inline-block;
-font-weight: bolder;
+.item h5 {
+  display: inline-block;
+  font-weight: bolder;
   font-size: 15px;
   font-weight: 800;
   opacity: 0.8;
   margin-top: 12px;
-
 }
 
 @media screen and (min-width: 993px) and (max-width: 1398px) {
-  .item{
+  .item {
     width: 800px;
     height: 200px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin-top: 50px;
     border: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .item img {
@@ -86,16 +101,16 @@ font-weight: bolder;
   }
 }
 
-
-
-
 @media screen and (min-width: 767px) and (max-width: 993px) {
-  .item{
+  .item {
     width: 800px;
     height: 200px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin-top: 50px;
     border: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .item img {
@@ -109,3 +124,4 @@ font-weight: bolder;
     display: none;
   }
 }
+/*# sourceMappingURL=main.css.map */
